--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
     "react": "16.0.0",
     "react-dom": "16.0.1",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "webpack-cli": "^3.3.5"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development",
